syntax = "proto3";

package auth;

option go_package = "github.com/werbot/werbot/internal/grpc/proto/auth";

message RefreshTokenRequest {
    string refresh_token = 1;
}
